[package]
edition = "2021"
name = "rustmsx"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
derivative = "2.2.0"
dyn-clone = "1.0.11"
eventbus = "0.5.1"
gloo = "0.8.0"
js-sys = "0.3.61"
serde = {version = "1.0.159", features = ["derive"]}
serde-big-array = "0.5.1"
serde_json = "1.0.95"
thiserror = "1.0.40"
time = {version = "0.3.20", features = ["wasm-bindgen"]}
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter", "fmt", "time"]}
tracing-wasm = "0.2.1"
tracing-web = "0.1.2"
wasm-bindgen = "0.2.84"
web-sys = {version = "0.3.61", features = [
  "CanvasRenderingContext2d",
  "ImageData",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
]}
yew = {version = "0.20.0", features = ["csr"]}
yewdux = "0.9.2"
