[package]
edition = "2021"
name = "rustmsx"
version = "0.1.0"

[workspace]
members = [
  ".",
  "msx",
  "rustmsx-wasm",
]

[dependencies]
msx = {path = "msx"}
rustmsx-wasm = {path = "rustmsx-wasm"}

anyhow = "1.0.70"
clap = {version = "4.1.13", features = ["derive", "env"]}
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
